<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/ques1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/ques1"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:fontFamily="monospace"
        android:layout_gravity="center_horizontal"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/museum_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/crafts_museum" />

        <TextView
            android:id="@+id/museum_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/museum_img"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/museums"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2.5">

        <ImageView
            android:id="@+id/monument_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/humayun"
            android:text="@string/monuments" />

        <TextView
            android:id="@+id/monument_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/monument_img"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/monuments"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <ImageView
            android:id="@+id/parks_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/lodhi_garden"
            android:text="@string/parks" />

        <TextView
            android:id="@+id/parks_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/parks_img"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/parks"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/rest_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/dum_pukht"
            android:text="@string/restaurants" />

        <TextView
            android:id="@+id/rest_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/rest_img"
            android:padding="20dp"
            android:layout_alignParentRight="true"
            android:text="@string/restaurants"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:fontFamily="monospace"
            android:textStyle="bold"/>

    </RelativeLayout>
</LinearLayout>
